--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.22'
     implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'com.codeborne:selenide:6.6.0'
+    implementation 'commons-dbutils:commons-dbutils:1.7'
+
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
