--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'com.codeborne:selenide:6.6.0'
     implementation 'commons-dbutils:commons-dbutils:1.7'
 
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.5'
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.6.0'
+
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
